--- a/site/guide/model-workflows/_add-new-workflows.qmd
+++ b/site/guide/model-workflows/_add-new-workflows.qmd
@@ -17,7 +17,7 @@ To add a new blank workflow:
 
 1. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
-1. Click **Add Workflow** to save your blank workflow, and then [configure your workflow steps](/guide/model-workflows/configure-custom-workflows#configure-workflow-steps).
+1. Click **Add Workflow** to save your blank workflow, and then [configure your workflow steps](/guide/model-workflows/configure-custom-workflows.qmd#configure-workflow-steps).
 
 [^longnote]:
 
