--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -3,4 +3,5 @@ title: "Workflow configuration examples"
 date: last-modified
 ---
 
-WIP
+Learn from example workflow configurations to help you tailor workflows to fit your organization's requirements for managing model risk throughout your entire model lifecycles.
+
