Filename change + workflow deletion

--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -9,7 +9,7 @@ listing:
     fields: [title, description]
     contents:
     - manage-model-stages.qmd
-    - configure-custom-workflows.qmd
+    - configure-model-workflows.qmd
     - workflow-configuration-examples.qmd
 ---
 
@@ -216,10 +216,10 @@ Add workflow states by either while configuring a **{{< fa wifi >}} Workflow Sta
 5. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
 6. Click **Save** to create the workflow state.
 
-#### Delete workflow states*
+#### Delete workflow states
 
 ::: {.callout-important title="Workflow state deletion is permanent."}
-If a state is in use on a workflow within a {{< fa wifi >}} Workflow State Change step, the state cannot be deleted.
+If a state is or was previously in use  on a workflow within a {{< fa wifi >}} Workflow State Change step, the state cannot be deleted.
 :::
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -259,7 +259,7 @@ If a state is in use on a workflow within a {{< fa wifi >}} Workflow State Chang
 
 [^10]: [Conditional requirements](#conditional-requirements)
 
-[^11]: **[Configure custom workflows](configure-custom-workflows.qmd#create-custom-workflows):**<br><br>
+[^11]: **[Configure custom workflows](configure-model-workflows.qmd#create-custom-workflows):**<br><br>
 
     1. Configure two **{{< fa cube >}} Model Stage Change** steps for your associated rejection and approval stages.
     2. Then, from the bottom of your **{{< fa users >}} Approval** step:
@@ -273,13 +273,13 @@ If a state is in use on a workflow within a {{< fa wifi >}} Workflow State Chang
 
 [^13]: [Conditional requirements](#conditional-requirements)
 
-[^14]: [Configure custom workflows](configure-custom-workflows.qmd#link-workflow-together)
+[^14]: [Configure custom workflows](configure-model-workflows.qmd#link-workflow-together)
 
 [^15]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
 [^16]: Make model inventory fields **[required on registration]{.smallcaps}** to ensure necessary fields have valid values.
 
-[^17]: [Configure custom workflows](configure-custom-workflows.qmd#link-workflow-together)
+[^17]: [Configure custom workflows](configure-model-workflows.qmd#link-workflow-together)
 
 [^18]: [Workflow step types](#workflow-step-types)
 
@@ -293,4 +293,4 @@ If a state is in use on a workflow within a {{< fa wifi >}} Workflow State Chang
 
 [^23]: [Manage model stages](manage-model-stages.qmd)
 
-[^24]: [Configure custom workflows](configure-custom-workflows.qmd#configure-workflow-steps)
+[^24]: [Configure custom workflows](configure-model-workflows.qmd#configure-workflow-steps)
