--- a/site/guide/model-workflows/configure-model-workflows.qmd
+++ b/site/guide/model-workflows/configure-model-workflows.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Configure custom workflows"
+title: "Configure model workflows"
 date: last-modified
 aliases:
   - /guide/set-up-model-workflows.html
@@ -64,7 +64,11 @@ a. Make your desired changes to step configuration[^4] and step relationships[^5
 
 b. When you are finished, click **Save Workflow** to apply your changes.
 
-### Delete workflow steps
+### Delete workflow steps*
+
+::: {.callout-important title="Workflow step deletion is permanent."}
+Deleting workflow steps on workflows active on models may result in malfunctioning workflows.
+:::
 
 1. Hover over the step until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
@@ -83,6 +87,24 @@ b. When you are finished, click **Save Workflow** to apply your changes.
     On the confirmation dialogue that appears, select **OK** to confirm deletion.
 
 3. When you are finished, click **Save Workflow** to apply your changes.
+
+## Delete existing workflows*
+
+::: {.callout-important title="Workflow deletion is permanent."}
+- If a workflow is in use on a model, that model will not be impacted.
+- Deletion will prevent any future runs of that workflow.
+:::
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Workflows**.
+
+3. Hover over the workflow you would like to remove until the **{{< fa ellipsis-vertical >}}** appears, then click on it.
+
+4. Select **{{< fa ban >}} Delete Workflow**.
+
+5. After you confirm, the workflow will be removed and inaccessible by models for any future runs.
+
 
 ## What's next
 
