Moved guides to own sidebar

--- a/site/get-started/platform/explore-sample-model-documentation.qmd
+++ b/site/get-started/platform/explore-sample-model-documentation.qmd
@@ -109,7 +109,7 @@ Continue with [Register your first model](register-your-first-model.qmd) to lear
 
 [^8]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
 
-[^9]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
+[^9]: [Working with templates](/guide/templates/working-with-templates.qmd)
 
 [^10]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
 
