--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -73,7 +73,7 @@ If additional fields are required on model registration for your organization:
 
 [^3]: [Manage groups](/guide/configuration/manage-groups.qmd)
 
-[^4]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
+[^4]: [Working with templates](/guide/templates/working-with-templates.qmd)
 
 [^5]: Learn more about [vendor models](/about/glossary/glossary.qmd#vendor-model)
 
