--- a/site/guide/templates/working-with-templates.qmd
+++ b/site/guide/templates/working-with-templates.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Working with documentation templates"
+title: "Working with templates"
 date: last-modified
 listing:
   - id: documentation-templates
@@ -14,9 +14,10 @@ listing:
 aliases:
   - /guide/working-with-documentation-templates.html
   - /guide/model-documentation/working-with-documentation-templates.html
+  - /guide/templates/working-with-documentation-templates.html
 ---
 
-Use {{< var vm.product >}}'s versioned documentation templates to ensure consistent and comprehensive model documentation, validation reports, and ongoing monitoring reports across all your models. 
+Use {{< var vm.product >}}'s versioned templates to ensure consistent and comprehensive model documentation, validation reports, and ongoing monitoring reports across all your models.
 
 :::{#documentation-templates}
 :::
