--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -943,7 +943,7 @@ We've expanded our reference guides on working with documentation templates, inc
 :::
 
 ::: {.w-40-ns .tc}
-[Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd){.button}
+[Working with templates](/guide/templates/working-with-templates.qmd){.button}
 
 :::
 
