--- a/site/guide/model-workflows/_review-model-workflows.qmd
+++ b/site/guide/model-workflows/_review-model-workflows.qmd
@@ -11,7 +11,7 @@ Review the details for workflows active on a specific model:
 
 1. Click on the tab you would like to review:
 
-    - **Details** — Name of the workflow, the workflow's status, when it was created, and when it was started.
+    - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model.
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
     - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow state is highlighted on this view.
@@ -31,7 +31,7 @@ Review the details for workflows active on a specific model:
 
 1. Click on the tab you would like to review:
 
-    - **Details** — Name of the workflow, the workflow's status, when it was created, and when it was started.
+    - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model.
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
     - **Workflow** — Overview of the entire workflow. The current workflow state is highlighted on this view.
