--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -5,7 +5,32 @@ date: last-modified
 
 Learn from example workflow configurations to help you tailor workflows to fit your organization's requirements for managing model risk throughout your entire model lifecycles.
 
-## Example model lifecycle
+## Example workflows
+
+To cover activities in their model lifecycle up to model deployment, an organization has the following workflows configured:
+
+::: {.panel-tabset}
+
+### On model registration
+
+This workflow initiates upon model registration[^1] — when models are added to the **{{< fa cubes >}} Inventory**, and covers model development activities, including documentation of the model.
+
+- This particular organization pairs their developers into teams of two, where one develops and initially documents the model, and the other peer reviews and approves the model for official validation, requesting revisions if the documentation is incomplete.
+- They meticulously transition the model through the stages[^2] of their development cycle with this workflow, as well as transition the workflow into linked states.[^3]
+
+::: {.tc}
+![Example model development cycle workflow](example_model-registration-workflow.png){fig-alt="A screenshot showing an example model development cycle workflow" .screenshot group="model-registration"}
+:::
+
+### On model validation
+
+This workflow is initiated when a field on the model changes — in this case, when the model development team submits their model for validation and enters in a date in the [submitted for initial validation on]{.smallcaps} field via a step in the previous *On model registration* workflow.
+
+### On model deployment
+
+This workflow is initiated manually, when validation is complete and the model is ready for implementation.
+
+:::
 
 ## Workflow step type examples**
 
@@ -76,4 +101,11 @@ For example, if you wanted your models where the field `GenAI Model` is set to `
 
 :::
 
+<!-- FOOTNOTES -->
+
+[^1]: ![Adding a workflow that initiates on model registration](example_model-registration.png){fig-alt="A screenshot showing the modal for adding a workflow that initiates on model registration" .screenshot group="model-registration"}
+
+[^2]: [Manage model stages](manage-model-stages.qmd)
+
+[^3]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
