--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -72,7 +72,7 @@ Creates a button that performs an action on behalf of the user.
 |---:|---|
 | [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.[^8]  |
 | [action button label]{.smallcaps} | Text that displays on your action button. |
-| [request fields]{.smallcaps} | Include required inventory fields alongside your action.[^9]  |
+| [request fields]{.smallcaps} (optional) | Include required inventory fields alongside your action.[^9]  |
 : **{{< fa arrow-pointer >}} User Action v2** step configuration {.hover tbl-colwidths="[40,60]"}
 
 #### {{< fa users >}} Approval
