--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -24,7 +24,16 @@ This workflow initiates upon model registration[^1] — when models are added to
 
 ### On model validation
 
-This workflow is initiated when a field on the model changes — in this case, when the model development team submits their model for validation and enters in a date in the [submitted for initial validation on]{.smallcaps} field via a step in the previous *On model registration* workflow.
+This workflow is initiated when a field is populated — in this case, when the model development team submits their model for validation and enters in a date in the [submitted for validation]{.smallcaps} field via the **Submit for Validation** action step in the previous *On model registration* workflow.[^4]
+
+- In this workflow, the model stage remains as [In Initial Validation]{.smallcaps} throughout, while the state of the workflow transitions to reflect the status of validation.
+- The option to develop potential challenger models is at the discretion of the validator, or they can choose to approve the champion model without submitting additional challengers.
+- Depending on whether or not the model is a GenAI model the validation report is also submitted for additional review to the organization's legal team.
+
+::: {.tc}
+![Example model validation cycle workflow](example_model-validation-workflow.png){fig-alt="A screenshot showing an example model validation cycle workflow" .screenshot group="model-validation"}
+:::
+
 
 ### On model deployment
 
@@ -108,4 +117,6 @@ For example, if you wanted your models where the field `GenAI Model` is set to `
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
 [^3]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
+
+[^4]: ![Adding a workflow that initiates on model validation](example_model-validation.png){fig-alt="A screenshot showing the modal for adding a workflow that initiates on model validation" .screenshot group="model-validation"}
 
