--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -26,9 +26,9 @@ This workflow initiates upon model registration[^1] — when models are added to
 
 This workflow is initiated when a field is populated — in this case, when the model development team submits their model for validation and enters in a date in the [submitted for validation]{.smallcaps} field via the **Submit for Validation** action step in the previous *On model registration* workflow.[^4]
 
-- In this workflow, the model stage remains as [In Initial Validation]{.smallcaps} throughout, while the state of the workflow transitions to reflect the status of validation.
+- In this workflow, the model stage[^5] remains as [in initial validation]{.smallcaps} throughout, while the state of the workflow[^6] transitions to reflect the status of validation.
 - The option to develop potential challenger models is at the discretion of the validator, or they can choose to approve the champion model without submitting additional challengers.
-- Depending on whether or not the model is a GenAI model the validation report is also submitted for additional review to the organization's legal team.
+- Depending on whether or not the model is a GenAI model, the validation report is also submitted for additional review to the organization's legal team before approval.
 
 ::: {.tc}
 ![Example model validation cycle workflow](example_model-validation-workflow.png){fig-alt="A screenshot showing an example model validation cycle workflow" .screenshot group="model-validation"}
@@ -43,7 +43,11 @@ This workflow is initiated manually, when validation is complete and the model i
 
 ## Workflow step type examples**
 
-### User Action
+#### {{< fa cube >}} Model Stage Change
+
+#### {{< fa wifi >}} Workflow State Change
+
+#### {{< fa arrow-pointer >}} User Action v2
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -64,7 +68,7 @@ Example
 
 ::::
 
-### Approval
+#### {{< fa users >}} Approval
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -83,7 +87,7 @@ Example
 
 ::::
 
-### Condition Branch
+#### {{< fa maximize >}} Condition Branch
 
 For example, if you wanted your models where the field `GenAI Model` is set to `true` to undergo a special legal approval process:
 
@@ -110,6 +114,12 @@ For example, if you wanted your models where the field `GenAI Model` is set to `
 
 :::
 
+#### {{< fa clock >}} Wait
+
+#### {{< fa arrow-right-arrow-left >}} Run Workflow
+
+#### {{< fa circle-stop >}} End
+
 <!-- FOOTNOTES -->
 
 [^1]: ![Adding a workflow that initiates on model registration](example_model-registration.png){fig-alt="A screenshot showing the modal for adding a workflow that initiates on model registration" .screenshot group="model-registration"}
@@ -119,4 +129,8 @@ For example, if you wanted your models where the field `GenAI Model` is set to `
 [^3]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
 [^4]: ![Adding a workflow that initiates on model validation](example_model-validation.png){fig-alt="A screenshot showing the modal for adding a workflow that initiates on model validation" .screenshot group="model-validation"}
+
+[^5]: [Manage model stages](manage-model-stages.qmd)
+
+[^6]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
