--- a/site/index.qmd
+++ b/site/index.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: "Welcome to our documentation"
+pagetitle: "Welcome to our documentatin"
 page-layout: full
 sidebar: false
 repo-actions: false
