Fixed button issue

--- a/site/training/program/training-faq.qmd
+++ b/site/training/program/training-faq.qmd
@@ -170,7 +170,8 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training]<!--(https://docs.validmind.ai/training/developer-fundamentals/using-validmind-for-model-development.html#/section-4)-->{.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/register-models-in-inventory.qmd){.button-small}
+[{{< fa graduation-cap >}} training](#){.button-small}
+[{{< fa book-open >}} docs](/guide/model-inventory/register-models-in-inventory.qmd){.button-small}
 :::
 
 ::::
