Initial commit for rebranding

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -146,7 +146,7 @@ html {
 ::: {.center .br3 .shadow-4 .bg-white .pa5 .w-70-ns}
 
 <!-- TOP ROW: Setup + Admin | Model Dev | Model Validation -->
-:::: {.flex .flex-wrap .justify-around .mb5}
+:::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-25-ns .mb3}
 :::: {.items-start}
@@ -154,8 +154,6 @@ html {
 ::::
 ### Setup + Administration
 [Invite users and control access to ValidMind by managing user roles, groups, and permissions.]{.light-text}
-
-[**Setup QuickStart**](/get-started/quickstart-administrator.qmd){.button-green .cta .mt3}
 :::
 
 ::: {.w-25-ns .mb3}
@@ -164,8 +162,6 @@ html {
 ::::
 ### Model Development
 [Save time by automating documentation and testing for your models using the ValidMind Library.]{.light-text}
-
-[**Developer quickstart**](/get-started/quickstart-developer.qmd){.button-green .cta .mt3}
 :::
 
 ::: {.w-25-ns .mb3}
@@ -174,9 +170,24 @@ html {
 ::::
 ### Model Validation
 [Quickly assess compliance by linking evidence from developers in your validation reports.]{.light-text}
+:::
 
+::::
+
+:::: {.flex .flex-wrap .justify-around .mb5}
+
+::: {.w-25-ns .mb3}
+[**Setup QuickStart**](/get-started/quickstart-administrator.qmd){.button-green .cta .mt3}
+:::
+
+::: {.w-25-ns .mb3}
+[**Developer Quickstart**](/get-started/quickstart-developer.qmd){.button-green .cta .mt3}
+:::
+
+::: {.w-25-ns .mb3}
 [**Validator QuickStart**](/get-started/quickstart-validator.qmd){.button-green .cta .mt3}
 :::
+
 ::::
 
 <!-- VALIDMIND TOUR -->
