--- a/site/get-started/common-steps/_access-quickstart-notebook.qmd
+++ b/site/get-started/common-steps/_access-quickstart-notebook.qmd
@@ -2,6 +2,6 @@
 
 You can either load the hosted version of our notebook, or download the notebook to run in your own local environment:
 
-#### Load the hosted notebook (recommended)
+#### Open the hosted notebook (recommended)
 
 1. Sign in to [JupyterHub]({{< var url.jupyterhub >}}) with your {{< var vm.product >}} login.
